vm/src/snapshots/vm__test__stack_snapshot_tests@bitwise_ops.tapir.snap
---
source: vm/src/lib.rs
expression: results
input_file: vm/src/snapshot_tests/stack/bitwise_ops.tapir
---
[
  FrameResult(
    active_states: 1,
    int_prop: 5,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 8,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 4,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 1,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 7,
  ),
  FrameResult(
    active_states: 0,
    int_prop: 6,
  ),
]
