vm/src/snapshots/vm__test__stack_snapshot_tests@comparison_ops.tapir.snap
---
source: crates/tapir-script/vm/src/lib.rs
expression: stack_at_waits
input_file: crates/tapir-script/vm/src/snapshot_tests/stack/comparison_ops.tapir
---
[
  ([
    [
      -1,
      15,
      0,
      6,
      15,
      83886091,
      15,
    ],
  ], PropObj(
    int_prop: 5,
  )),
  ([
    [
      -1,
      20,
      0,
      20,
      15,
      83886105,
      20,
    ],
  ], PropObj(
    int_prop: 15,
  )),
  ([
    [
      -1,
      30,
      30,
      20,
      15,
      83886119,
      30,
    ],
  ], PropObj(
    int_prop: 20,
  )),
  ([], PropObj(
    int_prop: 30,
  )),
]
