vm/src/snapshots/vm__test__stack_snapshot_tests@conditional_not_taken.tapir.snap
---
source: crates/tapir-script/vm/src/lib.rs
expression: stack_at_waits
input_file: crates/tapir-script/vm/src/snapshot_tests/stack/conditional_not_taken.tapir
---
[
  ([
    [
      5,
    ],
  ], PropObj(
    int_prop: 5,
  )),
  ([], PropObj(
    int_prop: 5,
  )),
]
