vm/src/snapshots/vm__test__stack_snapshot_tests@conditional_taken.tapir.snap
---
source: vm/src/lib.rs
expression: results
input_file: vm/src/snapshot_tests/stack/conditional_taken.tapir
---
[
  FrameResult(
    active_states: 1,
    int_prop: 5,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 5,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 15,
  ),
  FrameResult(
    active_states: 0,
    int_prop: 15,
  ),
]
