vm/src/snapshots/vm__test__stack_snapshot_tests@globals.tapir.snap
---
source: crates/tapir-script/vm/src/lib.rs
expression: stack_at_waits
input_file: crates/tapir-script/vm/src/snapshot_tests/stack/globals.tapir
---
[
  ([
    [
      -1,
      0,
      0,
      5,
      0,
      5,
      0,
      5,
    ],
    [
      -1,
      5,
      0,
      1,
      1,
      0,
      1,
    ],
  ], PropObj(
    int_prop: 0,
  )),
  ([
    [
      -1,
      0,
      1,
      5,
      1,
      5,
      0,
      5,
    ],
    [
      -1,
      5,
      0,
      2,
      2,
      1,
      1,
    ],
  ], PropObj(
    int_prop: 1,
  )),
  ([
    [
      -1,
      0,
      2,
      5,
      2,
      5,
      0,
      5,
    ],
    [
      -1,
      5,
      0,
      3,
      3,
      2,
      1,
    ],
  ], PropObj(
    int_prop: 2,
  )),
  ([
    [
      -1,
      0,
      3,
      5,
      3,
      5,
      0,
      5,
    ],
    [
      -1,
      5,
      0,
      4,
      4,
      3,
      1,
    ],
  ], PropObj(
    int_prop: 3,
  )),
  ([
    [
      -1,
      0,
      4,
      5,
      4,
      5,
      0,
      5,
    ],
  ], PropObj(
    int_prop: 4,
  )),
  ([], PropObj(
    int_prop: 5,
  )),
]
