vm/src/snapshots/vm__test__stack_snapshot_tests@globals_defined_after_use.tapir.snap
---
source: vm/src/lib.rs
expression: results
input_file: vm/src/snapshot_tests/stack/globals_defined_after_use.tapir
---
[
  FrameResult(
    active_states: 1,
    int_prop: 5,
  ),
  FrameResult(
    active_states: 0,
    int_prop: 15,
  ),
]
