vm/src/snapshots/vm__test__stack_snapshot_tests@large_number_manipulation.tapir.snap
---
source: crates/tapir-script/vm/src/lib.rs
expression: stack_at_waits
input_file: crates/tapir-script/vm/src/snapshot_tests/stack/large_number_manipulation.tapir
---
[
  ([
    [
      1024,
      3200,
      6400,
    ],
  ], PropObj(
    int_prop: 3024,
  )),
  ([], PropObj(
    int_prop: 3024,
  )),
]
