vm/src/snapshots/vm__test__stack_snapshot_tests@logical_operators.tapir.snap
---
source: crates/tapir-script/vm/src/lib.rs
expression: stack_at_waits
input_file: crates/tapir-script/vm/src/snapshot_tests/stack/logical_operators.tapir
---
[
  ([
    [
      -1,
      1010,
      1000,
      1010,
      1010,
    ],
  ], PropObj(
    int_prop: 5,
  )),
  ([], PropObj(
    int_prop: 1010,
  )),
]
