vm/src/snapshots/vm__test__stack_snapshot_tests@negative_numbers.tapir.snap
---
source: crates/tapir-script/vm/src/lib.rs
expression: stack_at_waits
input_file: crates/tapir-script/vm/src/snapshot_tests/stack/negative_numbers.tapir
---
[
  ([], PropObj(
    int_prop: -1,
  )),
]
