vm/src/snapshots/vm__test__stack_snapshot_tests@properties.tapir.snap
---
source: crates/tapir-script/vm/src/lib.rs
expression: stack_at_waits
input_file: crates/tapir-script/vm/src/snapshot_tests/stack/properties.tapir
---
[
  ([
    [
      -1,
      5,
      8,
      3,
    ],
  ], PropObj(
    int_prop: 5,
  )),
  ([
    [
      -1,
      8,
      8,
      3,
    ],
  ], PropObj(
    int_prop: 8,
  )),
  ([], PropObj(
    int_prop: 9,
  )),
]
