vm/src/snapshots/vm__test__stack_snapshot_tests@short_circuit_evaluation.tapir.snap
---
source: vm/src/lib.rs
expression: results
input_file: vm/src/snapshot_tests/stack/short_circuit_evaluation.tapir
---
[
  FrameResult(
    active_states: 1,
    int_prop: 0,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 1,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 1,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 2,
  ),
  FrameResult(
    active_states: 0,
    int_prop: 112,
  ),
]
